classDiagram
    class CustomerOrder {
      +Long id
      +String orderNo
      +Long buyerUserId
      +Long assetId
      +String assetType
      +UsageMode usageMode
      +OrderStatus status
      +BigDecimal totalAmount
      +BigDecimal depositAmount
      +String depositNo
      +Long stationId
      +Long poolEntryId
      +Long splitRuleId
      +Long certificateId
    }
    class CustomerOrderItem {
      +Long id
      +Long orderId
      +Long assetId
      +Integer quantity
      +BigDecimal unitPrice
      +BigDecimal subtotal
    }
    class DepositRule {
      +Long id
      +String assetType
      +Integer yearIndex
      +BigDecimal depositRate
    }
    class OrderStatus
    class UsageMode
    class CertificateType
    class SharedPoolService {
      +poolAsset(...) SharedPoolEntry
      +createSplitRule(assetId, poolEntryId, ownerRate, stationRate) RevenueSplitRule
      +createSettlement(poolEntryId, start, end) RevenueSettlement
    }
    class AssetOwnership
    class SharedPoolEntry
    class RevenueSplitRule
    class RevenueSettlement
    class Deposit
    class Certificate

    CustomerOrder "1" --> "0..*" CustomerOrderItem
    CustomerOrder "1" --> "0..1" SharedPoolEntry : poolEntryId
    CustomerOrder "1" --> "0..1" RevenueSplitRule : splitRuleId
    CustomerOrder "1" --> "0..1" Certificate : certificateId
    CustomerOrder "1" --> "0..1" Deposit : depositNo
    CustomerOrder "1" --> "1" AssetOwnership : buyer=owner
    DepositRule ".." CustomerOrder : computeDepositAmount
    SharedPoolService "..>" RevenueSplitRule : createSplitRule
    SharedPoolService "..>" RevenueSettlement : createSettlement
